@@ -925,6 +925,26 @@ table.integrations {
   }
 }
 
+.inbound-filters-stats {
+  height: 50px;
+
+  .bar-chart figure a {
+    height: 50px;
+
+    span {
+      &.filtered {
+        background: @gray-lightest;
+      }
+    }
+
+    &:hover span {
+      &.filtered {
+        background: @gray-light;
+      }
+    }
+  }
+}
+
 /**
 * Auth providers
 * ============================================================================
