@@ -85,7 +85,6 @@
         {{ form.scrape_javascript|as_crispy_field }}
         {{ form.token|as_crispy_field }}
         {{ form.token_header|as_crispy_field }}
-        {{ form.blacklisted_ips|as_crispy_field }}
       </div>
     </div>
 
